--- a/app/styles/sass/about.scss
+++ b/app/styles/sass/about.scss
@@ -8,7 +8,7 @@
 
 	@include max-width-lg();
 	@include max-width-md();
-	@include max-width-mobile();
+	// @include max-width-mobile();
 
 	h2, p {
 		color: black;
