--- a/app/styles/sass/helpers.scss
+++ b/app/styles/sass/helpers.scss
@@ -44,7 +44,7 @@
 
 @mixin max-width-mobile() {
 	@media screen and (max-width: 480px) {
-		width: 100%;
+		width: 90%;
 	}
 }
 
